objects/EXPRN__Exp_Business_Info__c.object
<CustomObject>
    <fields>
        <fullName>EXPRN__RBBID__c</fullName>
        <label>Registration Number</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__REG_01_30_BT_AM__c</fullName>
        <label>REG_01_30_BT_AM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__REG_31_60_BT_AM__c</fullName>
        <label>REG_31_60_BT_AM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__REG_61_90_BT_AM__c</fullName>
        <label>REG_61_90_BT_AM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__REG_91PLUS_BT_AM__c</fullName>
        <label>REG_91PLUS_BT_AM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__REG_ACCT_BAL_AM__c</fullName>
        <label>REG_ACCT_BAL_AM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__REG_ACCT_BAL_MSK__c</fullName>
        <label>REG_ACCT_BAL_MSK</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__REG_CUR_BAL_AM__c</fullName>
        <label>REG_CUR_BAL_AM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__REG_DBT__c</fullName>
        <label>REG_DBT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__REG_HI_CR_MSK__c</fullName>
        <label>REG_HI_CR_MSK</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__REG_RCNT_HI_CR_AM__c</fullName>
        <label>REG_RCNT_HI_CR_AM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__REG_TRD_LN_CT__c</fullName>
        <label>REG_TRD_LN_CT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Rating_Risk__c</fullName>
        <label>Rating Risk</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Risk_Category__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Risk Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__SIC_Code__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>SIC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Sales__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Sales</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Score_Change__c</fullName>
        <label>Score Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Score_Date__c</fullName>
        <label>Score Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Score_Percentile__c</fullName>
        <label>Score Percentile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__State_Of_Incorporation__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>State Of Incorporation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Stock_Exchange_Symbol__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Stock Exchange &amp; Symbol</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Stock_Symbol__c</fullName>
        <label>Stock Symbol</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Sum_of_legal_filings__c</fullName>
        <defaultValue>&apos;$0&apos;</defaultValue>
        <label>Sum of legal filings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Tax_Lien_filings__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Tax Lien filings</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Total_Trade_0130__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Total Trade 01-30</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Total_Trade_3160__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Total Trade 31-60</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Total_Trade_6190__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Total Trade 61-90</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Total_Trade_Balance__c</fullName>
        <defaultValue>&apos;$0&apos;</defaultValue>
        <label>Total Trade Balance</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Total_Trade_Current__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Total Trade Current</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Total_Trade_DBT__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Total Trade DBT</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Total_Trade_Lines_Reported__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Total Trade Lines Reported</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Total_Trade_Recent_High_Credit__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Total Trade Recent High Credit</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Total_number_of_trades__c</fullName>
        <defaultValue>&apos;Not Available&apos;</defaultValue>
        <label>Total number of trades</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Total_trade_and_collection_660__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Total trade and collection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__TradeCollectionCount__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>TradeCollectionCount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__UCC_filings__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>UCC filings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Verification_Triggers__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Verification Triggers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EXPRN__X6_Mo_High_Total_Balance__c</fullName>
        <label>6 Mo High Total Balance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__X6_Mo_Low_Total_Balance__c</fullName>
        <label>6 Mo Low Total Balance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__X6_month_average__c</fullName>
        <defaultValue>IF( $RecordType.DeveloperName = &apos;Intelliscore&apos;, &apos;$0 - $0&apos;, &apos;N/A&apos;)</defaultValue>
        <label>6 month average</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__X91__c</fullName>
        <label>91+</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Years_on_File__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>Years on File</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EXPRN__sbcs_Inquiry_last_12_months__c</fullName>
        <label>Inquiry last 12 months</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__sbcs_Inquiry_last_6_months__c</fullName>
        <label>Inquiry last 6 months</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__sbcs_score__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <label>SBCS Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foreign_Country__c</fullName>
        <label>Foreign Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fortune_1000_Year__c</fullName>
        <label>Fortune 1000 Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_Count__c</fullName>
        <label>Inquiry Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Judgement_Balance__c</fullName>
        <label>Judgement Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Judgement_count__c</fullName>
        <label>Judgement count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Filings_Success__c</fullName>
        <label>Legal Filings Success</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matching_Branch_Address__c</fullName>
        <label>Matching Branch Address</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Title__c</fullName>
        <label>Model Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Description__c</fullName>
        <label>NAICS Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentile_Ranking__c</fullName>
        <label>Percentile Ranking</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Risk_Class_Definition__c</fullName>
        <label>Risk Class Definition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Comments__c</fullName>
        <label>Score Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Success__c</fullName>
        <label>Score Success</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCC_Derogatory_Count__c</fullName>
        <label>UCC Derogatory Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UCC_Filings_Count__c</fullName>
        <label>UCC Filings Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fsrScoreFactors_Score_Factor_Definition__c</fullName>
        <label>fsrScoreFactors Score Factor Definition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fsrScoreTrends_Collection_Score__c</fullName>
        <label>fsrScoreTrends Collection Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fsrScoreTrends_Credit_Status_Comments__c</fullName>
        <label>fsrScoreTrends Credit Status Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fsrScoreTrends_Credit_Status_Success__c</fullName>
        <label>fsrScoreTrends Credit Status Success</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fsrScoreTrends_Definition__c</fullName>
        <label>fsrScoreTrends Definition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fsrScoreTrends_Model_Title__c</fullName>
        <label>fsrScoreTrends Model Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fsrScoreTrends_Percentile_Ranking__c</fullName>
        <label>fsrScoreTrends Percentile Ranking</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fsrScoreTrends_Risk_Class__c</fullName>
        <label>fsrScoreTrends Risk Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fsrScoreTrends_Score_Trends_Quarter__c</fullName>
        <label>fsrScoreTrends Score Trends Quarter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fsrScoreTrends_Score_Trends_Score__c</fullName>
        <label>fsrScoreTrends Score Trends Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fsrScoreTrends_Score__c</fullName>
        <label>fsrScoreTrends Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fsrScore_Model_Code__c</fullName>
        <label>fsrScore Model Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fsrScore_Model_Title__c</fullName>
        <label>fsrScore Model Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fsrScore_Percentile_Ranking__c</fullName>
        <label>fsrScore Percentile Ranking</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fsrScore_Recommended_Credit_Limit_Amount__c</fullName>
        <label>fsrScore Recommended Credit Limit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fsrScore_Risk_Class_Description__c</fullName>
        <label>fsrScore Risk Class Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fsrScore_Score__c</fullName>
        <label>fsrScore Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Experian Business Information</label>
    <listViews>
        <fullName>EXPRN__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>EXPRN__Copy_of_All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Copy of All Business Info</label>
    </listViews>
    <listViews>
        <fullName>EXPRN__Test_Business_Info</fullName>
        <columns>NAME</columns>
        <columns>EXPRN__Account_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>EXPRN__OpportunityName__c</columns>
        <filterScope>Mine</filterScope>
        <label>Test Business Info</label>
    </listViews>
    <nameField>
        <label>Experian Business Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experian Business Informations</pluralLabel>
    <recordTypes>
        <fullName>EXPRN__Business_Profile_With_Score</fullName>
        <active>true</active>
        <description>For Business Profile With Score</description>
        <label>Business Profile With Score</label>
    </recordTypes>
    <recordTypes>
        <fullName>EXPRN__Business_Profiles</fullName>
        <active>true</active>
        <description>For Business &amp; Owner Profiles with Score, Business Profile with Score, Business Profile, Business Owner</description>
        <label>Business Profiles</label>
    </recordTypes>
    <recordTypes>
        <fullName>EXPRN__Business_Summary</fullName>
        <active>true</active>
        <description>For Business Summary report</description>
        <label>Business Summary</label>
    </recordTypes>
    <recordTypes>
        <fullName>EXPRN__Intelliscore</fullName>
        <active>true</active>
        <description>For Intelliscore report</description>
        <label>Intelliscore</label>
    </recordTypes>
    <recordTypes>
        <fullName>EXPRN__International_Canada</fullName>
        <active>true</active>
        <description>For International Canda Buinesses</description>
        <label>International Canada</label>
    </recordTypes>
    <recordTypes>
        <fullName>EXPRN__Premier_Profile</fullName>
        <active>true</active>
        <description>For Premier Profile report and Premier &amp; Owner Profiles report</description>
        <label>Premier Profile</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>